--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c9b9d">  <td>22/07/11 12:26:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeApp(org.testng.ITestResult)[pri:0, instance:scripts.TestCase1@3059cbc]">&lt;&lt;closeApp</td> 
+<tr bgcolor="8c9b9d">  <td>22/09/11 13:15:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass1.closeApp(org.testng.ITestResult)[pri:0, instance:scripts.Testcase3@3059cbc]">&lt;&lt;closeApp</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>22/07/11 12:25:59</td>   <td>-10378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openApp()[pri:0, instance:scripts.TestCase1@3059cbc]">&gt;&gt;openApp</td> 
+<tr bgcolor="8c9b9d">  <td>22/09/11 13:14:44</td>   <td>-23514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass1.openApp()[pri:0, instance:scripts.Testcase3@3059cbc]">&gt;&gt;openApp</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="bea1a6">  <td>22/07/11 12:26:05</td>   <td>-4384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.tc1()[pri:0, instance:scripts.TestCase1@3059cbc]">tc1</td> 
+<tr bgcolor="bea1a6">  <td>22/09/11 13:14:55</td>   <td>-12394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcase3.tc3()[pri:0, instance:scripts.Testcase3@3059cbc]">tc3</td> 
   <td>main@1361960727</td>   <td></td> </tr>
 </table>
